Fix some mobile layout issues   * Hide layer manager by default   * No Samp/Compass/Image viewer modules for mobile

--- a/app/css/sidebar.css
+++ b/app/css/sidebar.css
@@ -23,7 +23,7 @@
 #accordion
 {
 	position: relative;
-	left: 15px;
+	left: -255px;
 	width: 250px;
 	pointer-events: auto;
 }
